WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
87735
[Chromium] [Regression] SELECT popup misplaced when there is not enough vertical space
https://bugs.webkit.org/show_bug.cgi?id=87735
Summary
[Chromium] [Regression] SELECT popup misplaced when there is not enough verti...
Alexander Pavlov (apavlov)
Reported
2012-05-29 06:06:26 PDT
1. Set a screen resolution with the height of 900 or less. 2. Go to
http://rezina.ua/
and scroll the page so that the SELECTs "Резина > Бренд" OR "Диски > Бренд" are exactly in the middle of the page 3. Click one of these SELECTs. A popup with options is opened in the top of the page instead of immediately above or below the SELECT element. It can also overlap the SELECT element in certain circumstances. Upstreaming
http://code.google.com/p/chromium/issues/detail?id=129562
(the bug contains a screenshot). This regression was introduced in
http://trac.webkit.org/changeset/113418
Attachments
Patch
(2.36 KB, patch)
2012-05-29 06:20 PDT
,
Alexander Pavlov (apavlov)
tkent
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexander Pavlov (apavlov)
Comment 1
2012-05-29 06:20:25 PDT
Created
attachment 144538
[details]
Patch
Kent Tamura
Comment 2
2012-05-29 06:35:41 PDT
Comment on
attachment 144538
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=144538&action=review
ok
> Source/WebCore/ChangeLog:10 > + No new tests, as popups are not testable in Chromium.
Right. Let's consider to introduce a unit test for the rect calculation later.
Alexander Pavlov (apavlov)
Comment 3
2012-05-29 06:41:22 PDT
Committed
r118768
: <
http://trac.webkit.org/changeset/118768
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug