[Chromium] [Regression] SELECT popup misplaced when there is not enough vertical space https://bugs.webkit.org/show_bug.cgi?id=87735

Reviewed by Kent Tamura.

This change fixes the obsolete WebWidget Y-repositioning code for the insufficient vertical space case, not removed in r113418.

No new tests, as popups are not testable in Chromium.

* platform/chromium/PopupContainer.cpp:
(WebCore::PopupContainer::layoutAndCalculateWidgetRect):

Canonical link: https://commits.webkit.org/105510@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@118768 268f45cc-cd09-0410-ab3c-d52691b4dbfc